# diary-rs

./: .gitignore  Cargo.toml  README.md  index.html  output.css  package.json  styles.css  tailwind.config.js
src/: app.rs  helpers.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: timer_controls.rs  timer_display.rs
src/pages/: mod.rs
src/pages/home/: main.rs
src/pages/timer/: main.rs
