[package]
name = "tauri-counter-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-feather = "1.0.0"
gloo-timers = "0.3.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
yew-router = "0.18.0"

[workspace]
members = ["src-tauri"]
